test/good/classes/abstract01.px

class A def
    func f() abstract

class B: A def
    func f(): Void def
        print 'B'

B().f()
