test/bad/classes/method02.px

class Test def
    func f(): Void def
        skip

Test().f(3)
